<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneTicket</string>
    <string name="mainActionTextMessage">Acción que requiere login:</string>
    <string name="mainActionButton">Realizar acción</string>
    <string name="mainMockMovieButton">Mirar película mockeada</string>
    <string name="movieListButton">Ver lista de peliculas</string>
    <string name="mainLogoutButton">Cerrar sesión</string>
    <string name="errorDialogContinue">Continuar</string>
    <string name="confirmDialogGoBack">Salir</string>
    <string name="confirmDialogStay">Permanecer</string>
    <string name="messageDialogContinue">Continuar</string>
    <string name="defaulErrorMessage">Error al comunicarse con el Servidor</string>

    <string-array name="codes">
        <item>0</item>
        <item>401</item>
        <item>404</item>
        <item>408</item>
        <item>409</item>
        <item>500</item>
    </string-array>
    <string-array name="codesNames">
        <item>@string/defaulErrorMessage</item>
        <item>Credenciales Inválidas</item>
        <item>@string/defaulErrorMessage</item>
        <item>@string/defaulErrorMessage</item>
        <item>El e-mail o el DNI ya poseen una cuenta</item>
        <item>Error en el Servidor</item>
    </string-array>

    <string name="title_activity_master">PhoneTicket</string>
    <string name="app_id">250416881779134</string>
    <string name="selection_finished">Continuar</string>
    <string name="butacas">/6 Butacas</string>
    <string name="initial_armchair_count">0</string>
    <string name="cinema_screen">Cinema Screen</string>
    <string name="error_obteniendo_informacion">No se pudo obtener la informacion</string>

    <string-array name="letters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="total_sin_promociones">"Total Sin Promociones: "</string>
    <string name="precio_final_text">"Precio Final: "</string>
    <string name="promociones">"Promociones: "</string>
    <string name="comprar">Comprar</string>
    <string name="reservar">Reservar</string>
    <string name="plus_discount">Para incrementar la promocion</string>
    <string name="decrease_discount">Para decrementar la promocion</string>
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_login">Ingreso</string>
    <string name="title_activity_qrcode">Código QR</string>
    <string name="qrDescription">Código QR</string>
    <string name="direccion">"Dirección: "</string>
    <string name="price">$</string>

</resources>