<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cinemaAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieName"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/cinemaAddress"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/selectionFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/armChairSelected"
        android:layout_centerInParent="true"
        android:text="@string/selection_finished" />

    <TextView
        android:id="@+id/movieDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cinemaAddress"
        android:layout_alignParentRight="true"
        android:gravity="right"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/movieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/armChairText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/line"
        android:text="@string/butacas"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/armChairSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_toLeftOf="@+id/armChairText"
        android:text="@string/initial_armchair_count"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/room"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectionFinished"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:contentDescription="@string/cinema_screen"
            android:src="@drawable/patanlla_cine" />
    </LinearLayout>

</RelativeLayout>